fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ body {
   gap: 0.4rem;
   background-color: #ffffff;
   border-radius: 999px;
-  padding: 0.3rem 0.8rem;
+  padding: 0.3rem 0.8rem; /*================ ⬅️ Increase these */
   font-family: "Inter", sans-serif;
   font-weight: 500;
   font-size: 0.9rem;
@@ -173,12 +173,8 @@ body {
 
   /* ✨ Positioning */
   position: relative;
-  display: flex;
   justify-content: flex-end;
-  margin-left: auto; /* pushes it to the right */
-  margin-right: 14rem; /* spacing from edge */
-  margin-top: 0rem; /* spacing from section above */
-  margin-bottom: 2rem;
+  margin-right: 14rem; /* moves it to the right */
 }
 
 /* Green pulsing dot */
@@ -231,6 +227,7 @@ body {
   flex: 1;
   margin-top: -5rem;
   margin-left: 3rem;
+  margin-bottom:2rem;
 }
 
 .intro-image img {
@@ -270,6 +267,10 @@ body {
 }
 
 .section-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
   max-width: 1600px; /* controls how wide the cards area is */
   margin: 0 auto; /* centers it horizontally */
 }
@@ -279,14 +280,15 @@ body {
 
 /*==========================================body content (CARDS) ============================================*/
 
-/*Explore my projects container*/
+/*Explore my projects etc. container*/
 .section-title {
   position: relative;
-  top: 2rem;
   display: flex;
   justify-content: left;
   align-items: center;
-  padding-left: 20rem;
+  padding-left: 0rem;
+  position: relative;
+  left: 19rem;
 }
 
 .card-container {
